--- a/instagram-ng14/src/app/components/notification/notification.component.html
+++ b/instagram-ng14/src/app/components/notification/notification.component.html
@@ -62,11 +62,11 @@
   <div *ngFor="let like of allLiked" [ngClass]="{'border-gray-300': like.read==1, 'border-blue-600 shadow-sm shadow-blue-400': like.read==0}" class="p-3 m-3 border border-gray-300 rounded-md">
     <h3 *ngIf="!like.read">New Notifications</h3>
     <div class="flex justify-between items-center">
-      <div class="flex items-center">
-        <img *ngIf="like?.likedPost.user?.userProfile?.profile_img; else elseBlock" class="rounded-full w-8 h-8 flex mr-3" src="{{imageUrl}}/{{like.likedPost.user?.userProfile?.profile_img}}" />
+      <div *ngIf="like?.likedPost" class="flex items-center">
+        <img *ngIf="like?.likedPost?.user?.userProfile?.profile_img; else elseBlock" class="rounded-full w-8 h-8 flex mr-3" src="{{imageUrl}}/{{like.likedPost.user?.userProfile?.profile_img}}" />
         <ng-template #elseBlock><img class="h-8 w-8 rounded-full flex mr-3" src="../../../../assets/default.png" /></ng-template>
         <p>
-          <span class="font-bold">{{ like.likedPost.user.username }}</span>
+          <span class="font-bold">{{ like?.likedPost?.user?.username }}</span>
           {{ like.message
           }}<span class="text-gray-400">{{ like.createdAt | date }}</span>
         </p>
