--- a/instagram-ng14/src/app/components/feedlist/feedlist.component.html
+++ b/instagram-ng14/src/app/components/feedlist/feedlist.component.html
@@ -2,26 +2,9 @@
 
 <div class="flex gap-4 mb-6">
   <div class="min-h-screen w-full lg:w-4/5" infiniteScroll [infiniteScrollDistance]="0.5" (scrolled)="fatchFeed()">
-    <div class="border border-b-gray-400  bg-white">
-      <div class="flex hide-scrollbar overflow-x-auto p-1">
-        <div class="">
-          <img class="object-fill h-20 w-20 rounded-full border border-gray-500 p-0.5 mx-1 opacity-50"
-            src="{{ imageUrl }}/{{ user?.userProfile?.profile_img }}" />
-          <span class="text-xs mx-4">Your story</span>
-        </div>
-        <div *ngFor="let storyUser of allUsers" class="text-center">
-          <img *ngIf="storyUser?.userProfile?.profile_img; else elseBlock"
-            class="object-fill h-20 w-20 rounded-full border border-red-500 p-0.5 mx-1"
-            src="{{ imageUrl }}/{{ storyUser?.userProfile?.profile_img }}" />
-          <span class="text-xs">{{storyUser.username}}</span>
-          <ng-template #elseBlock><img class="h-20 w-20 rounded-full border border-red-500 p-0.5 mx-1"
-              src="../../../../assets/default.png" /></ng-template>
-        </div>
-      
-
-    </div>
-  </div>
-  <!-- post -->
+  <!-- story  -->
+  <app-list-story [allUsers]="allUsers" [user]="user"></app-list-story>
+  <!-- feed post -->
   <app-feeds [feeds]="feeds" [user]="user"> </app-feeds>
 </div>
 
@@ -43,9 +26,9 @@
     </div>
   </div>
   <hr />
+  <!-- suggestion  -->
   <p class="text-sm font-bold mx-3 p-3">Suggetion for you</p>
   <hr />
-
   <div *ngFor="let singleuser of allUsers"
     class="mx-2 flex flex-row items-center align-items justify-between px-3 mt-2">
     <div class="flex items-center justify-between">
