--- a/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
+++ b/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
@@ -107,3 +107,57 @@
         
     </div>
 </div> 
+
+
+
+<!--
+<div
+  class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] min-h-auto bg-gray-400 bg-opacity-40 flex items-center justify-center">
+  <div class="relative w-full max-w-2xl h-auto">
+    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+      <div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
+        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
+          </svg>
+
+        </h3>
+        <button type="button" (click)="nextAction()"
+          class="text-blue-500 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-hide="staticModal">
+          Next
+        </button>
+      </div>
+      <div *ngIf="!next" class="h-1/2">
+        <img [hidden]="isHidden" (click)="file_input.click()" id="defaultimg" src="../../../../assets/postBg.png"
+          class="opacity-25 h-28 mt-20 mx-auto">
+        <input formControlName="files" name="files" type="file" multiple #file_input hidden>
+        <p (click)="file_input.click()" class="text-center pb-20 pt-2 text-blue-600">Select photo from gallary</p>
+      </div>
+      <div *ngIf="next">
+        <div class="p-6 space-y-6">
+          <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+            With less than a month to go before the European Union enacts new consumer privacy laws for its citizens,
+            companies around the world are updating their terms of service agreements to comply.
+          </p>
+          <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+            The European Union’s General Data Protection Regulation (G.D.P.R.) goes into effect on May 25 and is meant
+            to ensure a common set of data rights in the European Union. It requires organizations to notify users as
+            soon as possible of high-risk data breaches that could personally affect them.
+          </p>
+        </div>
+      </div>
+
+      <div *ngIf="next" class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600">
+        <button type="button"
+          class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600 mr-auto">Cancel</button>
+        <button type="button"
+          class="ml-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Post story</button>
+      </div>
+
+
+    </div>
+  </div>
+</div>
+-->
