--- a/instagram-ng14/src/app/components/story/add-story/add-story.component.html
+++ b/instagram-ng14/src/app/components/story/add-story/add-story.component.html
@@ -14,11 +14,11 @@
           </ng-template>
           <b class="mx-1 text-lg">{{user.username}}</b>
         </h3>
-        <!-- <button type="button" (click)="nextAction()"
+        <button type="button" (click)="closeModal()"
           class="text-blue-500 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
           data-modal-hide="staticModal">
-          Next
-        </button> -->
+          X
+        </button>
       </div>
       <!-- Modal body -->
       <div class="h-full">
