--- a/instagram-ng14/src/app/components/notification/notification.component.html
+++ b/instagram-ng14/src/app/components/notification/notification.component.html
@@ -5,7 +5,7 @@
 
 <div class="flex-col">
   <div class="p-2 m-2 font-bold">Follow requests</div>
-  <div *ngFor="let object of allFollowers" [ngClass]="{'border-gray-300': object.read==1, 'border-blue-600': object.read==0}" class="p-3 m-3 border border-gray-300 rounded-md">
+  <div *ngFor="let object of allFollowers" [ngClass]="{'border-gray-300': object.read==1, 'border-pink-600 shadow-sm shadow-pink-400': object.read==0}" class="p-3 m-3 border border-gray-300 rounded-md">
     <h3 *ngIf="!object.read">New Notifications</h3>
     <div class="flex justify-between items-center">
       <div class="flex items-center">
@@ -59,7 +59,7 @@
 
   <hr />
   <div class="p-2 m-2 font-bold">Other Notifications</div>
-  <div *ngFor="let like of allLiked" [ngClass]="{'border-gray-300': like.read==1, 'border-blue-600 shadow-sm shadow-blue-400': like.read==0}" class="p-3 m-3 border border-gray-300 rounded-md">
+  <div *ngFor="let like of allLiked" [ngClass]="{'border-gray-300': like.read==1, 'border-pink-600 shadow-sm shadow-pink-400': like.read==0}" class="p-3 m-3 border border-gray-300 rounded-md">
     <h3 *ngIf="!like.read">New Notifications</h3>
     <div class="flex justify-between items-center">
       <div *ngIf="like?.likedPost" class="flex items-center">
