--- a/instagram-ng14/src/app/components/profile/profile.component.html
+++ b/instagram-ng14/src/app/components/profile/profile.component.html
@@ -30,8 +30,14 @@
           <!-- follow button -->
           <a *ngIf="self" routerLink="/edit-profile"
             class="bg-blue-500 px-2 py-1 text-white font-semibold text-sm rounded text-center sm:inline-block block">Edit</a>
-          <a *ngIf="!self"
-            class="bg-blue-500 px-2 py-1 text-white font-semibold text-sm rounded text-center sm:inline-block block">Follow</a>
+          <div *ngIf="!self">
+            <a *ngIf="!user.isAlreadyFollowed" (click)="doUndoFollowing(userProfile.user.id, $event)"
+              class="bg-blue-500 px-2 py-1 text-white font-semibold text-sm rounded text-center sm:inline-block block">follow</a>
+            <a *ngIf="user.isAlreadyFollowed=='follow'" (click)="doUndoFollowing(userProfile.user.id, $event)"
+              class="bg-gray-500 px-2 py-1 text-white font-semibold text-sm rounded text-center sm:inline-block block">unfollow</a>
+            <a *ngIf="user.isAlreadyFollowed=='pending'" (click)="doUndoFollowing(userProfile.user.id, $event)"
+              class="bg-gray-500 px-2 py-1 text-white font-semibold text-sm rounded text-center sm:inline-block block">requested</a>
+          </div>
         </div>
 
         <!-- post, following, followers list for medium screens -->
@@ -148,8 +154,8 @@
 
                   {{ post.cmtPosts.length }}
 
-                  <svg *ngIf="self" (click)="deletePost(post.id)" xmlns="http://www.w3.org/2000/svg" fill="red" viewBox="0 0 24 24"
-                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                  <svg *ngIf="self" (click)="deletePost(post.id)" xmlns="http://www.w3.org/2000/svg" fill="red"
+                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round"
                       d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
                   </svg>
