--- a/instagram-ng14/src/app/components/shared/header/header.component.html
+++ b/instagram-ng14/src/app/components/shared/header/header.component.html
@@ -48,7 +48,7 @@
             d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
         </svg>
         <!-- <span class="absolute top-0 left-5 bg-red-700 text-white text-xs font-medium mr-1 px-1 py-0.5 rounded-full dark:bg-red-900 dark:text-red-300">3</span>      -->
-        <div
+        <div *ngIf="totNotification != 0"
           class="absolute inline-flex items-center justify-center w-4 h-4 text-[0.5rem] font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -right-2 dark:border-gray-900">
           {{totNotification}}</div>
       </div>
@@ -109,4 +109,3 @@
   </section>
 </div>
 <!-- component -->
-  
