--- a/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
+++ b/instagram-ng14/src/app/components/posts/create-post/create-post.component.html
@@ -1,163 +1,69 @@
 <app-header></app-header>
 
-<!-- <div class="flex justify-center items-center">
-  <div
-    class="h-96 w-2/3 m-3 flex border rounded overflow-hidden shadow-lg border-gray-300 p-2"
-  >
-    <div
-      class="w-1/2 flex justify-center items-center border border-r-gray-400"
-    >
-      <img
-        [hidden]="isHidden"
-        (click)="file_input.click()"
-        id="defaultimg"
-        src="../../../../assets/image.png"
-        class="opacity-25 h-20"
-      />
-
-      <ng-image-slider
-        *ngIf="imageObject"
-        class="img-responsive"
-        [images]="imageObject"
-        [infinite]="false"
-        [manageImageRatio]="true"
-        [autoSlide]="1"
-        [animationSpeed]="0.1"
-        slideImage="1"
-        [imageSize]="{ width: sliderImageWidth, height: sliderImageHeight }"
-        #nav
-      ></ng-image-slider>
-      <p class="opacity-30 h-20">Select Photos from gallary</p>
-      <input
-        (change)="selectFiles($event)"
-        formControlName="files"
-        name="files"
-        type="file"
-        multiple
-        #file_input
-        hidden
-      />
-    </div>
-    <div class="w-1/2 mr-2 md:relative">
-      <div class="flex items-center px-4 py-3">
-        
-        <img
-          class="h-8 w-8 rounded-full"
-          src="../../../../assets/default.png"
-        />
-
-        <div class="ml-3">
-          <span class="text-sm font-semibold antialiased block leading-tight"
-            >yashprajapati26</span
-          >
-          <span class="text-gray-600 text-xs block">yash prajapati</span>
-        </div>
-      </div>
-      <textarea
-        class="ml-2 rounded-md border border-gray-400 p-2 min-w-full"
-        placeholder="write a caption..."
-      ></textarea>
-      <button
-        class="p-2 bg-blue-700 text-white rounded-md md:absolute md:bottom-2 md:right-0"
-      >
-        share
-      </button>
-    </div>
-  </div>
-</div> -->
-
-<div class="h-screen bg-gray-200 flex flex-col  items-center">
-    <div class="w-full max-w-2xl mt-10">
-        <h3 class="p-3 bg-white shadow-md rounded my-3">Create New Post </h3>
-
-        <form [formGroup]="postForm" (ngSubmit)="createPost(postForm.value)" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" enctype="multipart/form-data">
-          <div class="mb-6 flex items-center">
-            
-  
-            <img [hidden]="isHidden" (click)="file_input.click()" id="defaultimg" src="../../../../assets/image.png" class="opacity-25 h-20 mx-auto">
-            <div *ngFor="let url of imageUrls; let i=index" class="">  
-              <img [src]="url" class="border-2 h-20 mx-auto">
-            </div>
-            
-          </div>
-          <div class="flex">
-            <label (click)="file_input.click()" class="block text-gray-700 text-sm font-bold mb-2" for="password">
-              Select
-            </label>
-            <svg (click)="file_input.click()" class="mx-2 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6">
-                <path strokeLinecap="round" strokeLinejoin="round" d="M18.375 12.739l-7.693 7.693a4.5 4.5 0 01-6.364-6.364l10.94-10.94A3 3 0 1119.5 7.372L8.552 18.32m.009-.01l-.01.01m5.699-9.941l-7.81 7.81a1.5 1.5 0 002.112 2.13" />
-            </svg>
-            <input (change)="selectFiles($event)" formControlName="files" name="files" type="file" multiple #file_input  hidden>
-          </div>
-          <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-              Content
-            </label>
-            <textarea formControlName="content" name="content" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"  placeholder="content"></textarea>
-          </div>
-          <div class="flex items-center justify-between">
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-              Create Post
-            </button>
-           
-          </div>
-        </form>
-
-        <a class="text-sm text-blue-600" routerLink="/profile">Back to home !</a>
-        
-    </div>
-</div> 
-
-
-
-<!--
 <div
   class="fixed top-0 left-0 right-0 z-50 w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] min-h-auto bg-gray-400 bg-opacity-40 flex items-center justify-center">
   <div class="relative w-full max-w-2xl h-auto">
     <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-      <div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
-        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="w-6 h-6">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
-          </svg>
+      <form [formGroup]="postForm" (ngSubmit)="createPost(postForm.value)" enctype="multipart/form-data">
 
-        </h3>
-        <button type="button" (click)="nextAction()"
-          class="text-blue-500 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
-          data-modal-hide="staticModal">
-          Next
-        </button>
-      </div>
-      <div *ngIf="!next" class="h-1/2">
-        <img [hidden]="isHidden" (click)="file_input.click()" id="defaultimg" src="../../../../assets/postBg.png"
-          class="opacity-25 h-28 mt-20 mx-auto">
-        <input formControlName="files" name="files" type="file" multiple #file_input hidden>
-        <p (click)="file_input.click()" class="text-center pb-20 pt-2 text-blue-600">Select photo from gallary</p>
-      </div>
-      <div *ngIf="next">
-        <div class="p-6 space-y-6">
-          <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-            With less than a month to go before the European Union enacts new consumer privacy laws for its citizens,
-            companies around the world are updating their terms of service agreements to comply.
-          </p>
-          <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-            The European Union’s General Data Protection Regulation (G.D.P.R.) goes into effect on May 25 and is meant
-            to ensure a common set of data rights in the European Union. It requires organizations to notify users as
-            soon as possible of high-risk data breaches that could personally affect them.
-          </p>
+        <div class="flex items-center justify-between p-2 border-b rounded-t dark:border-gray-600">
+          <a routerLink="/feed" class="text-xl font-semibold text-gray-900 dark:text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18" />
+            </svg>
+
+          </a>
+          <h3 class="text-center text-sm font-bold mx-auto">create a new post</h3>
+          <button type="button" (click)="nextAction()"
+            class="text-blue-500 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+            data-modal-hide="staticModal">
+            Next
+          </button>
         </div>
-      </div>
+        <div *ngIf="!next" class="h-1/2">
+          <img [hidden]="isHidden" (click)="file_input.click()" id="defaultimg" src="../../../../assets/postBg.png"
+            class="opacity-25 h-28 mt-20 mx-auto">
+          <input formControlName="files" (change)="selectFiles($event)" name="files" type="file" multiple #file_input
+            hidden>
+          <p (click)="file_input.click()" class="text-center pb-20 pt-2 text-gray-500 font-bold">select photo from
+            gallary</p>
+        </div>
+        <div *ngIf="next" class="flex">
+          <div class="p-4 w-1/2">
+            <ng-image-slider class="img-responsive" [images]="imageObject" [infinite]="false" [manageImageRatio]="true"
+              [autoSlide]="1" [animationSpeed]="0.1" slideImage="1"
+              [imageSize]="{ width: sliderImageWidth, height: sliderImageHeight }" #nav></ng-image-slider>
+          </div>
+          <div class="w-1/2">
+            <div class="flex items-center p-3">
+              <img *ngIf="user?.userProfile?.profile_img; else elseBlock2" class="rounded-full w-7 h-7"
+                src="{{ imageUrl }}/{{ user?.userProfile?.profile_img }}" />
+              <ng-template #elseBlock2><img class="rounded-full w-8 h-7 flex mr-3"
+                  src="../../../../assets/default.png" />
+              </ng-template>
+              <div class="ml-3">
+                <span class="text-sm font-semibold antialiased block leading-tight">{{user.username}}</span>
+                <span class="text-gray-600 text-xs block">{{ user.firstname }} {{ user.lastname }}</span>
+              </div>
+            </div>
+            <div class="px-3">
+              <textarea formControlName="content" (keypress)="countLength($event)" placeholder="write a caption..."
+                class="w-full text-sm border border-gray-300 rounded-sm h-28 p-1 " maxlength='266'></textarea>
+              <span class="float-right text-sm text-gray-500">{{counter}} / 266</span>
+            </div>
+          </div>
+        </div>
 
-      <div *ngIf="next" class="flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600">
-        <button type="button"
-          class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600 mr-auto">Cancel</button>
-        <button type="button"
-          class="ml-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Post story</button>
-      </div>
+        <div *ngIf="next"
+          class="flex items-center p-2 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600">
+          <button type="button"
+            class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-md border border-gray-400 text-sm font-medium px-3 py-1.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600 mr-auto">Cancel</button>
+          <button type="submit"
+            class="ml-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-md text-sm px-3 py-1.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Share</button>
+        </div>
 
-
+      </form>
     </div>
   </div>
 </div>
--->
