like hover and image slider width fix

--- a/instagram-ng14/src/app/components/auth/login/login.component.html
+++ b/instagram-ng14/src/app/components/auth/login/login.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="bg-white mb-3 border border-gray-300 w-80 pt-8 pb-4 flex flex-col items-center">
     <img class="h-20 w-30" src="../../../../assets/Logo-Instagram.png" />
-    <h5 class="text-sm">Login</h5>
+    <h5 class="text-sm font-semibold">Login</h5>
     <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)" class="w-64 flex flex-col gap-1 mt-8"
       method="post">
       <input type="text" class="w-full rounded border bg-gray-100 p-2 text-xs mb-1"
@@ -31,7 +31,7 @@
           *ngIf="submitted && loginForm.controls.password?.errors?.['required']">*Password is required</span>
       </div>
       <button type="submit" class="mt-2 text-sm text-center bg-blue-600 text-white py-1 rounded font-medium">
-        Log In
+        Log in
       </button>
     </form>
 
@@ -43,7 +43,7 @@
     </div>
   </div>
   <div class="m-3 text-sm">
-    Dont have account ? Do
-    <a (click)="signup()" class="text-blue-600">SignUp</a>
+    Don't have an account ? 
+    <a (click)="signup()" class="text-blue-600 cursor-pointer">SignUp</a>
   </div>
 </div>
